--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,31 @@
 {
     "name": "diego-ninja/verisoul-api",
-    "description": "A modern php 8.x verisoul api client implementation",
-    "type": "library",
+    "description": "A modern php 8.3+ verisoul api client implementation",
     "license": "MIT",
+    "type": "library",
+    "authors": [
+        {
+            "name": "Diego Rin",
+            "email": "yosoy@diego.ninja"
+        }
+    ],
+    "require": {
+        "php": "^8.3",
+        "diego-ninja/granite": "^1",
+        "guzzlehttp/guzzle": "^7.8",
+        "illuminate/collections": "^12.21",
+        "nesbot/carbon": "^3.10",
+        "psr/log": "^3.0",
+        "psr/simple-cache": "^3.0"
+    },
+    "require-dev": {
+        "ergebnis/composer-normalize": "*",
+        "mockery/mockery": "^1.4.4",
+        "pestphp/pest": "^3",
+        "phpstan/phpstan": "^2",
+        "phpunit/phpunit": "^11.0"
+    },
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Ninja\\Verisoul\\": "src/"
@@ -13,30 +36,9 @@
             "Ninja\\Verisoul\\Tests\\": "tests/"
         }
     },
-    "authors": [
-        {
-            "name": "Diego Rin",
-            "email": "yosoy@diego.ninja"
-        }
-    ],
-    "minimum-stability": "stable",
-    "require": {
-      "php": "^8.3",
-      "diego-ninja/granite": "~1",
-      "nesbot/carbon": "^3.10",
-      "guzzlehttp/guzzle": "^7.8",
-      "psr/log": "^3.0",
-      "psr/simple-cache": "^3.0",
-        "illuminate/collections": "^12.21"
-    },
-    "require-dev": {
-      "phpunit/phpunit": "^11.0",
-      "mockery/mockery": "^1.4.4",
-      "pestphp/pest": "^3",
-      "phpstan/phpstan": "^2"
-    },
     "config": {
         "allow-plugins": {
+            "ergebnis/composer-normalize": true,
             "pestphp/pest-plugin": true
         }
     }
